--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
   
   <title>Frontend Mentor | Product preview card component</title>
 
@@ -40,7 +40,7 @@
     <li><s>$169.99</s></li>
     </ul>
 
-    <button class="btn"><img src="./images/icon-cart.svg" alt="cart">Add to Cart</button>
+    <button class="btn"><img src="./icon-cart.svg" alt="cart">Add to Cart</button>
       </article>
 
   </div>
