--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
     <article>
       <picture>
-        <source media="(min-width: 640px)" srcset="./images/image-product-desktop.jpg">
-        <img src="./images/image-product-mobile.jpg" alt="image" >
+        <source media="(min-width: 640px)" srcset="./image-product-desktop.jpg">
+        <img src="./image-product-mobile.jpg" alt="image" >
       </picture>
     </article>
 
@@ -47,7 +47,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Sunny Bajracharya</a>.
+    Coded by <a href="https://app.netlify.com/teams/dektret/overview">Sunny Bajracharya</a>.
   </div>
 </body>
 </html>
